Split jewelry products and adjust image pair assignments

--- a/index.html
+++ b/index.html
@@ -206,41 +206,67 @@
 
           <div class="product-grid" data-products>
             <article class="product" data-category="jewelry">
-              <div class="product-image product-image-multi">
+              <div class="product-image product-image-pair">
                 <img
-                  class="multi-frame frame-1"
-                  src="assets/Partner Items/635259979_122294806514207083_6138504611978104708_n.jpg"
-                  alt="Little Critters image 1"
-                />
-                <img
-                  class="multi-frame frame-2"
-                  src="assets/Partner Items/638009724_122294806424207083_2069318343562980771_n.jpg"
-                  alt="Little Critters image 2"
-                />
-                <img
-                  class="multi-frame frame-3"
+                  class="primary-image"
                   src="assets/Partner Items/635357522_122294806466207083_260623285508020003_n.jpg"
-                  alt="Little Critters image 3"
+                  alt="Flora Necklace image 1"
                 />
                 <img
-                  class="multi-frame frame-4"
+                  class="secondary-image"
                   src="assets/Partner Items/638068851_122294806376207083_7161265339297679918_n.jpg"
-                  alt="Little Critters image 4"
+                  alt="Flora Necklace image 2"
                 />
                 <span class="pill">Partner</span>
                 <div class="product-badge">Jewelry</div>
               </div>
-              <h3>Little Critters</h3>
+              <h3>Flora Necklace</h3>
               <p class="product-meta">One size</p>
               <div class="product-footer">
-                <span class="price">From ₱ 60</span>
+                <span class="price">₱ 120</span>
                 <button
                   class="add"
                   data-add
-                  data-product-kind="jewelry"
-                  data-product-id="partner-little-critters"
-                  data-product-name="Little Critters"
-                  data-product-price="0"
+                  data-product-kind="jewelry_fixed"
+                  data-item-type="Necklace"
+                  data-option-label="Necklace"
+                  data-product-id="partner-flora-necklace"
+                  data-product-name="Flora Necklace"
+                  data-product-price="120"
+                >
+                  + Add
+                </button>
+              </div>
+            </article>
+
+            <article class="product" data-category="jewelry">
+              <div class="product-image product-image-pair">
+                <img
+                  class="primary-image"
+                  src="assets/Partner Items/635259979_122294806514207083_6138504611978104708_n.jpg"
+                  alt="Flora Bracelet image 1"
+                />
+                <img
+                  class="secondary-image"
+                  src="assets/Partner Items/638009724_122294806424207083_2069318343562980771_n.jpg"
+                  alt="Flora Bracelet image 2"
+                />
+                <span class="pill">Partner</span>
+                <div class="product-badge">Jewelry</div>
+              </div>
+              <h3>Flora Bracelet</h3>
+              <p class="product-meta">One size</p>
+              <div class="product-footer">
+                <span class="price">₱ 80</span>
+                <button
+                  class="add"
+                  data-add
+                  data-product-kind="jewelry_fixed"
+                  data-item-type="Bracelet"
+                  data-option-label="Bracelet"
+                  data-product-id="partner-flora-bracelet"
+                  data-product-name="Flora Bracelet"
+                  data-product-price="80"
                 >
                   + Add
                 </button>
