update GGK to Gifted

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span></span>
           </button>
 
-          <a class="brand" href="#">GGK</a>
+          <a class="brand" href="#">Gifted</a>
           <div class="nav-links">
             <a href="#new">New</a>
             <a href="#hype">Flora Drop</a>
